LWA-225 fixes image overflow on pdf page

--- a/app/css/print.css
+++ b/app/css/print.css
@@ -52,8 +52,9 @@
         max-width: 80% !important;
     }
 
-    image {
+    img {
         max-width: 80% !important;
+        max-height: 80% !important;
     }
 
 }
